# ocpy07

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
profit_optimizer/: __init__.py  __main__.py  app.py
profit_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
profit_optimizer/algorithms/: __init__.py  brute_force.py  bruteforce.py  brutforce.py  greedy.py  knapsack.py  pruning.py
profit_optimizer/data/: actions.csv  dataset_1.csv  dataset_2.csv  dataset_test.csv
profit_optimizer/models/: __init__.py  action.py  data.py
profit_optimizer/utils/: __init__.py  constants.py  custom_error.py  decorator.py  logger.py
progit_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
